--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : https://www.linkedin.com/in/huy-tran-098b75a8/
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
