--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Quang Huy Tran"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "PhD Student in Optimal Transport and Machine Learing"
   location         : "Paris, France"
   employer         :
