--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Quang Huy Tran"
   avatar           : "profile.jpg"
-  bio              : "PhD Student in Optimal Transport and Machine Learing"
+  bio              : "PhD Student in Optimal Transport and Machine Learning"
   location         : "Paris, France"
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
