--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Quang Huy's website"
+title                    : "Not so optimal"
 title_separator          : "-"
 name                     : &name "Quang Huy"
 description              : &description "personal description"
