--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ author:
   codepen          :
   github           : "6Ulm"
   google_plus      :
-  linkedin         : "https://www.linkedin.com/in/huy-tran-098b75a8/"
+  linkedin         : "huy-tran-098b75a8"
   orcid            : #"http://orcid.org/yourorcidurl"
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
